--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,8 +10,9 @@
     padding-bottom: 1%;
     display: grid;
     grid-template-columns: repeat(6, 13rem);
-    grid-template-rows: repeat(8, 15rem);
-    gap: 1rem;
+    grid-template-rows: repeat(3, 16rem) 8rem repeat(4, 16rem);
+    column-gap: 20vw;
+    row-gap: 3vw;
     justify-content: center;
     align-items: center;
     color: #000;
@@ -46,6 +47,7 @@ footer{
     font-size: 5rem;
     border-radius: .5rem;
     user-select: none;
+    color: #fff000;
 }
 .computer-card-slot{
     border: 5px solid #000;
@@ -65,9 +67,6 @@ footer{
 }
 #trash-text{
     grid-column: 5;
-}
-.cards {
-    grid-column: 3;
 }
 .descriptive-text{
     color:#ffff00;
@@ -99,6 +98,10 @@ footer{
 }
 #center-text{
     grid-column: 3;
+    position:relative;
+    display:flex;
+    justify-content:center;
+    align-items: center;
 }
 .center-desc{
     grid-row:4;
@@ -114,7 +117,6 @@ footer{
 }
 .center{
     grid-row: 5;
-    color: white;
 }
 
 #draw {/*draw pile*/
@@ -123,7 +125,6 @@ footer{
 }
 #center{
     grid-column: 3;
-    background-color: white;
 }
 .playhand{
     grid-row: 6;
@@ -206,4 +207,10 @@ footer{
     color:#ffff00;
     font-size: 5rem;
     margin: 0;
+}
+#collect-button{
+    grid-column: 4;
+    font-size: 2rem;
+    position:absolute;
+    top:2em;
 }
